--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" type="text/css"href="css.styles"/>
   </head>
   <body>
-    <hi>my projects</hi>
-    <p>the following are the projects I have been trying to do at Moringa school:
+    <hi>MY PROJECTS.</hi>
+    <p>The following are the projects I have been trying to do at Moringa school:
     <ul>
+      <l1><a href="https://github.com/farhan123-code/i-dont-know" </l1>
+      <l1><a href="https://github.com/farhan123-code/my-first-webpage"</l1>
+
 
 
 
