--- a/index.html
+++ b/index.html
@@ -6,22 +6,16 @@
     <link rel="stylesheet" type="text/css"href="css.styles"/>
   </head>
   <body>
-    <hi>MY PROJECTS.</hi>
+    <h1>Hussein Sadam Farhan <h1>
+    <h2>MY PROJECTS.</h2>
     <p>The following are the projects I have been trying to do at Moringa school:
     <ul>
       <l1><a href="https://github.com/farhan123-code/i-dont-know" </l1>
       <l1><a href="https://github.com/farhan123-code/my-first-webpage"</l1>
-
-
-
-
-
-
-
     </ul>
 
    </P>
-    <h2>ABOUT ME. </h2>
+    <h3>ABOUT ME. </h3>
     <P>
     My name is Hussein Sadam Farhan. I am a graduate from Kenyatta University. I pursued marine science. I pursued my secondary school at Moi High School. My primary school was Plainsview Academy. I excelled very well in all my school levels. My passion for science is enormous especially about marine life.
     </p>
