add new changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>MY PROJECTS.</h2>
     <p>The following are the projects I have been trying to do at Moringa school:
     <ul>
-      <l1><a href="https://github.com/farhan123-code/i-dont-know" /a> </l1>
-      <l1><a href="https://github.com/farhan123-code/my-first-webpage"/a></l1>
+      <l1> check <a href="https://github.com/farhan123-code/i-dont-know" /a> </l1>
+      <l1> check<a href="https://github.com/farhan123-code/my-first-webpage"/a></l1>
     </ul>
 
    </P>
