add new changes

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" type="text/css"href="css.styles"/>
   </head>
   <body>
-    <h1>Hussein Sadam Farhan <h1>
+    <h1>Hussein Sadam Farhan <img src="me.jpg" alt="my image" /> <h1>
     <h2>MY PROJECTS.</h2>
     <p>The following are the projects I have been trying to do at Moringa school:
-    <ul>
-      <l1> check <a href="https://github.com/farhan123-code/i-dont-know" /a> </l1>
-      <l1> check<a href="https://github.com/farhan123-code/my-first-webpage"/a></l1>
+    <ol>
+      <l1> check <a href="https://github.com/farhan123-code/i-dont-know" /a> it uses html. </l1>
+      <l1> check<a href="https://github.com/farhan123-code/my-first-webpage"/a>it uses html. </l1>
     </ul>
 
    </P>
